# kato_examples

./: .gitignore  README.md  meson.build
01_log/: Makefile  main.cpp  meson.build
02_function/: Makefile  main.cpp  meson.build
03_truetype/: Makefile  main.cpp  meson.build  path.h.in
04_sleep/: Makefile  main.cpp  meson.build
05_ccfits/: Makefile  main.cpp
06_fit/: Makefile  main.cpp  meson.build
07_mutex/: main.cpp  meson.build
08_semaphore/: main.cpp  meson.build
lib/kato/: CCfits_addons.hpp  openblas_addons.hpp  truetype.hpp
lib/stb/: stb_truetype.h
