project('devsink',
    ['cpp', 'c'],
    default_options : [
        'cpp_std=gnu++20',
        'c_std=c17',
        'warning_level=3',
        'optimization=3'
    ]
)

subdir('01_log')
subdir('02_function')
subdir('03_truetype')
subdir('04_sleep')
subdir('05_ccfits')
subdir('06_fit')
subdir('07_mutex')
subdir('08_semaphore')
